src/components/HeroSlick/heroSliderIdentifier.css
/* ... */
/*@media screen and (-ms-high-contrast: active) and (-ms-high-contrast:none) {
    .wrapper {
        display: -ms-flexbox;
        -ms-flex-direction: column;
        -ms-align-self: center;
        width: 100%;
        height: 100vh;
        background-color: yellow;
  }
}*/
@media only screen and (max-width:575px) {

  .hero {
      height: 60vh;
      width: 100%;
      display: flex;
      display: -webkit-flex;
      justify-content: center;
      -webkit-justify-content: center;
      align-items: center;
      -webkit-align-items: center;
      background-color: var(--colorSecondary);
    overflow: hidden;
  }
  _::-webkit-full-page-media, _:future, :root .hero {
                  height: 70vh;
                      } 

     .wrapper {
        width: 100%;
        height: 100%;
        margin: 0 0 0 0;
    }
    .heading {
        /*margin: 270px 0 0 0;*/
        display: flex;
        justify-content: flex-start;
        align-items: flex-start;
        height: 100vh;
        color: #fff;
        background-color: #482864;
        background: linear-gradient(to top, rgba(72, 40, 100, 0), rgba(72, 40,100, 1));
    }

      div.heading {
        color: #fff;
    }  
    .textBox, .textBox_carousel .textBox3, .textBoxFirst {
        text-align: left;
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
        padding: 20px;
        height: 100%;
        width: 100%;
    } 

    .textBoxFirst {
        margin: -50px 0 0 0;
    }
    .textBox {
        margin: -80px 0 0 0;
    }

    .textBox_carousel, .textBox3 {
        margin: 100px 0 0 0;
        padding: 0 10px 0 10px;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
    }
 
         .purpleTitle {
        font-size: 150%;
        font-weight: 600;
    }
    .datePlacement {
        width: 100%;
        height: auto;
        display: flex;
        justify-content: center;
        align-items: center;

    }
    .dateHolder {
        list-style-type: none;
        margin-top: -10px;
    }  
    li {
        font-size: 12px;
    }  
    .button {
        margin-top: 5px;
        height: 30px;
        text-align: center;
        width: 225px;
        border: none;
        border-radius: 8px;
        background-color: #fff;
        color: #8b0000;
        padding: 3px 20px;
        text-decoration: none;
        display: inline-block;
        font-size: 1.15vh;
        font-weight: bold;
    }

        .donateH1 {
        margin: 50px 0 10px 0px;
        color: #fff;
        font-size: 4vh;
    }
    .donateUl {
        display: flex;
        flex-direction: column;
        justify-content: center;
        width: 100% !important;
        height: auto;
        color: #fff;
        font-size: 2vh !important;
        position: static !important;
    }
    .donateLi {
        height: 40%;
        font-size: 1.25vh;
        white-space: normal !important;
    }
    .donateP {
        font-size: 1.25vh;
    }
    .textBox3 .donateP:nth-child(2) {
        margin-top: -10px;
    }
    .textBox3 .donateP:nth-child(3)  {
        margin-top: -10px;
        margin-bottom: -10px;
    }
    .textBox3 .donateP {
        padding: 0 20px 0 20px;
    }
    .textBox3 .donateH1 {
        margin-top: 150px;
     }
    .textBox .donateH1 {
        margin-top: 200px;
        margin-bottom: -10px;
    }
    .textBox_carousel .donateH1 {
        margin-top: 150px;
    }
    .textBoxFirst .donateP {
        padding: 0 10px 0 10px;
    }
    .textBoxFirst .donateH1 {
        margin-top: 200px;
    }
    .textBox .datePlacement {
        margin-bottom: -15px;
    }
    .textBox .datePlacement .dateHolder .dateLine:first-child {
        margin-bottom: -10px;
        font-size: 1.5vh;
    }

    _::-webkit-full-page-media, _:future, :root .donateUl {
        height: 125px;
    }
         .movR {
            font-size: 12px;
            padding-right: 40px;
            margin-bottom: -50px;
            width: 100%;
        }
     @supports (-webkit-overflow-scrolling: touch) and (not (-ms-ime-align:auto))
and (not (-moz-appearance:none))
    {
        .textBox_carousel .donateUl {
            height: 50px;
            margin: 50px 0 50px 0;
        }
        .textBox_carousel .donateH1 {
            left: 40px;
            height: auto;
            width: 100%;
            text-align: center;
            margin: 75px -20px -30px 0;
        }
            .movR {
            font-size: 12px;
            padding-right: 20px;
            margin-bottom: -50px;
            width: 100%;
        }
        .textBox3 .donateH1 {
            margin-top: 175px;
        }
        .textBox .donateH1 {
            margin-top: 300px;   
        }
        .textBox_carousel .donateH1 {
            margin-top: 150px;
        }
        .textBoxFirst .donateH1 {
            margin-top: 300px;
        }

        _::-webkit-full-page-media, _:future, :root .textBoxFirst .donateH1 {
                        margin-top: 100px;
        } 

 _::-webkit-full-page-media, _:future, :root .textBox .donateH1 {
                             margin-top: 100px;
                                     }
    _::-webkit-full-page-media, _:future, :root .textBox .button {
           margin-top: 5px;                  
           height: 50px;
   }
        .textBox3 .button {
            margin-top: 20px;
        }
        _::-webkit-full-page-media, _:future, :root .textBox3 .button {
           margin-top: 1px;     
        }
    }
}
/* ... */

